update plugins:stop start FullNode shell